# airline-watch-dashboard

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml
config/: sources.yaml
outputs/: index.html  latest-digest.md
scripts/: monitor.sh  open_dashboard.cmd  serve_dashboard.sh  show_updates.sh
src/airline_watch/: __init__.py  analyzer.py  cli.py  collector.py  config.py  db.py  models.py  report.py  text.py
tests/: test_analyzer.py  test_collector.py  test_dashboard.py  test_news_collector.py  test_text.py
