[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airline-watch"
version = "0.1.0"
description = "Source-driven airline industry news and change monitor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "feedparser>=6.0",
  "openai>=1.75",
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "requests>=2.32",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
airline-watch = "airline_watch.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/airline_watch"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

